<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheelchair_robot_unity</name>
  <version>0.1.0</version>
  <description>Wheelchair robot simulation in Unity</description>
  <maintainer email="emre.tr@outlook.com">sahin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch + ROS 2 core -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>rclpy</exec_depend>
 
  <!-- Robot description + TF -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Messages used in configs / Nav2 stack -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Nav2 stack (used via nav2_bringup launch + params) -->
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>

  <!-- ROS bridge server -->
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
